# xbot_pre

./: .gitignore  58-xbot.rules  README.md  README.md~  bloom-generate.sh  install_dependencies.sh  q
docs/: ISCASxlab_protocols.doc  SIRVD-Driverboard底盘协议.doc
xbot/: CMakeLists.txt  package.xml
xbot/driver/: CMakeLists.txt  robot_cmd.cpp  robot_cmd.h  robot_frame.cpp  robot_frame.h  robot_serial.cpp  robot_serial.h
xbot/launch/: xbot.launch
xbot/param/: base.yaml
xbot/src/: xbot.cpp
xbot/urdf/: Xbot.urdf  Xbot_base.urdf
xbot2_tools/: CMakeLists.txt  package.xml
xbot2_tools/scripts/: keyboard_control.py  mapimg2base64.py
xbot_bringup/: CMakeLists.txt  package.xml
xbot_bringup/launch/: asus.launch  xbot.launch  xbot_asus.launch  xbot_asus_rplidar.launch  xbot_asus_rplidar_fusion.launch  xbot_fusion_asus_rplidar.launch  xbot_fusion_scan.launch  xbot_minimal.launch  xbot_rplidar.launch  xbot_rplidar_asus.launch  xbot_sick571.launch  xbot_simulation.launch
xbot_bringup/launch/includes/: asus_fusion.launch  asus_xtion_pro.launch.xml  sensor.launch  xbot.launch.xml
xbot_bringup/msg/: xbot_cmd.msg  xbot_state.msg
xbot_bringup/param/: mux.yaml
xbot_bringup/scripts/: control_publisher.py  xbot_driver.py  xbot_ros.py  xbot_scan180.py  xbot_state_publisher.py  xbot_state_subscriber.py
xbot_bringup/urdf/: Xbot.urdf.xacro  Xbot_base.urdf  Xbot_base_4W.urdf  Xbot_base_rplidar.urdf  Xbot_base_rplidar_asus.urdf  asus_xtion_pro.urdf.xacro  xbot.gv  xbot_new.urdf
xbot_core/xbot_core/: CMakeLists.txt  package.xml
xbot_core/xbot_dock_drive/: CMakeLists.txt  package.xml
xbot_core/xbot_dock_drive/include/xbot_dock_drive/: dock_drive.hpp  state.hpp
xbot_core/xbot_dock_drive/src/: dock_drive.cpp  dock_drive_debug.cpp  dock_drive_states.cpp
xbot_core/xbot_driver/doxygen/english/: en_simple_example.dox
xbot_core/xbot_driver/include/xbot_driver/: command.hpp  macros.hpp  modules.hpp  packets.hpp  parameters.hpp  xbot.hpp
xbot_core/xbot_driver/include/xbot_driver/modules/: acceleration_limiter.hpp  diff_drive.hpp  led_array.hpp
xbot_core/xbot_driver/include/xbot_driver/packet_handler/: packet_finder.hpp  payload_headers.hpp
xbot_core/xbot_driver/include/xbot_driver/packets/: core_sensors.hpp  imu_sensors.hpp
xbot_core/xbot_driver/scripts/web/firmware/: update_md5_values
xbot_core/xbot_driver/src/driver/: CMakeLists.txt  command.cpp  core_sensors.cpp  diff_drive.cpp  event_manager.cpp  imu_sensors.cpp  packet_finder.cpp  xbot.cpp
xbot_core/xbot_driver/src/test/: initialisation.cpp  sigslots.cpp  simple_loop.cpp
xbot_core/xbot_driver/src/tools/: CMakeLists.txt  simple_keyop.cpp
xbot_core/xbot_ftdi/: 50-xbot.rules  CMakeLists.txt  package.xml
xbot_core/xbot_ftdi/include/xbot_ftdi/: scanner.hpp
xbot_core/xbot_ftdi/scripts/: create_udev_rules
xbot_core/xbot_ftdi/src/: CMakeLists.txt  find_devices.cpp  flasher.cpp  ftdi_read_eeprom.cpp  ftdi_scan.cpp  ftdi_write_eeprom.cpp  ftdi_xbot.cpp  get_serial_number.cpp  overwrite_serial_number.cpp  reset_device.cpp  unflasher.cpp
xbot_description/: CMakeLists.txt  package.xml
xbot_driver/: CMakeLists.txt  multi_class.py  new_test.py  package.xml  test.py  thread_test.py  xbot_driver.py
xbot_driver/include/xbot_driver/: command.hpp  event_manager.hpp  parameters.hpp
xbot_driver/include/xbot_driver/modules/: battery.hpp  digital_output.hpp  sound.hpp
xbot_driver/include/xbot_driver/packet_handler/: payload_base.hpp
xbot_driver/scripts/doxygen/: update_doxygen.bash
xbot_driver/src/driver/: battery.cpp  imu_sensors.cpp  version_info.cpp.in  xbot.cpp
xbot_driver/src/test/: CMakeLists.txt  sigslots.cpp
xbot_driver/src/tools/: version_info.cpp
xbot_keyop/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  package.xml
xbot_keyop/doxygen/: mainpage.dox
xbot_keyop/include/keyop_core/: keyop_core.hpp
xbot_keyop/launch/: keyop.launch  safe_keyop.launch
xbot_keyop/param/: keyop_mux.yaml
xbot_keyop/src/: CMakeLists.txt  keyop_core.cpp  main.cpp
xbot_msgs/: .cproject  .gitignore  .project  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
xbot_msgs/msg/: CloudCamera.msg  DebugSensor.msg  DockInfraRed.msg  Echos.msg  MotorPower.msg  SensorState.msg  XbotState.msg  face_pose.msg
xbot_node/: .cproject  .project  CHANGELOG.rst  CMakeLists (copy).txt  CMakeLists.txt  package.xml
xbot_node/include/xbot_node/: diagnostics_1.hpp  odometry.hpp  xbot_ros.hpp
xbot_node/launch/: minimal.launch  robot_with_tf.launch  test_get_odom.launch  test_get_yaw.launch
xbot_node/param/: base.yaml  cmd_vel_mux_safe.yaml  diagnostics.yaml  webop_mux.yaml
xbot_node/plugins/: nodelet_plugins.xml
xbot_node/scripts/: getOdom2D.py  getYaw.py
xbot_node/src/: CMakeLists.txt
xbot_node/src/nodelet/: CMakeLists.txt  xbot_nodelet.cpp
xbot_node/src/tools/: CMakeLists.txt  debugTopics.cpp
xbot_safety_controller/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  package.xml
xbot_safety_controller/include/xbot_safety_controller/: safety_controller.hpp
xbot_safety_controller/launch/: standalone.launch
xbot_safety_controller/plugins/: nodelet_plugins.xml
xbot_safety_controller/src/: nodelet.cpp
