<package>
  <name>xbot_safety_controller</name>
  <version>0.6.7</version>
  <description>
    A controller ensuring the safe operation of Xbot.

    The SafetyController keeps track of bumper, cliff and wheel drop events. In case of the first two,
    Xbot is commanded to move back. In the latter case, Xbot is stopped.
    
    This controller can be enabled/disabled.
    The safety states (bumper pressed etc.) can be reset. WARNING: Dangerous!
  </description>
  <author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/yujinrobot/xbot/issues</url>
  <url type="repository">https://github.com/yujinrobot/xbot</url>
  <url type="website">http://ros.org/wiki/xbot_safety_controller</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>xbot_msgs</build_depend>
  <build_depend>yocs_controllers</build_depend>
  <build_depend>ecl_threads</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>xbot_msgs</run_depend>
  <run_depend>yocs_controllers</run_depend>
  <run_depend>ecl_threads</run_depend>
  
  <export>
    <nodelet plugin="${prefix}/plugins/nodelet_plugins.xml"/>
  </export>
</package>
