<package>
  <name>xbot_core</name>
  <version>0.6.4</version>
  <description>
    Non-ROS software for xbot, XLAB Robot's mobile research base.
  </description>
  <author email="stonier@yujinrobot.com">Daniel Stonier</author>
  <author email="yhju@yujinrobot.com">Younghun Ju</author>
  <author email="jorge@yujinrobot.com">Jorge Santos Simon</author>
  <author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/yujinrobot/xbot_core/issues</url>
  <url type="repository">https://github.com/yujinrobot/xbot_core</url>
  <url type="website">http://ros.org/wiki/xbot_core</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xbot_dock_drive</run_depend> 
  <run_depend>xbot_driver</run_depend>
  <run_depend>xbot_ftdi</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
